<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.trading.engine</groupId>
    <artifactId>ultra-low-latency-trading-engine</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>trading-engine-proto</module>
        <module>matching-engine-core</module>
        <module>grpc-server</module>
        <module>market-data-service</module>
        <module>persistence-module</module>
        <module>benchmarking-module</module>
        <module>trading-engine-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <spring.boot.version>3.2.4</spring.boot.version>
        <lmax.disruptor.version>4.0.0</lmax.disruptor.version>
        <chronicle.map.version>3.25ea5</chronicle.map.version>
        <grpc.version>1.62.2</grpc.version>
        <protobuf.version>3.25.3</protobuf.version>
        <jmh.version>1.37</jmh.version>
        <agrona.version>1.21.1</agrona.version>
        <lombok.version>1.18.30</lombok.version>
        <thread.affinity.version>3.23.3</thread.affinity.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal Modules -->
            <dependency>
                <groupId>com.trading.engine</groupId>
                <artifactId>matching-engine-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trading.engine</groupId>
                <artifactId>persistence-module</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trading.engine</groupId>
                <artifactId>monitoring-module</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trading.engine</groupId>
                <artifactId>trading-engine-proto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trading.engine</groupId>
                <artifactId>grpc-server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.trading.engine</groupId>
                <artifactId>market-data-service</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- LMAX Disruptor -->
            <dependency>
                <groupId>com.lmax</groupId>
                <artifactId>disruptor</artifactId>
                <version>${lmax.disruptor.version}</version>
            </dependency>

            <!-- Chronicle Map -->
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>chronicle-map</artifactId>
                <version>${chronicle.map.version}</version>
            </dependency>

            <!-- Agrona (HFT Utils) -->
            <dependency>
                <groupId>org.agrona</groupId>
                <artifactId>agrona</artifactId>
                <version>${agrona.version}</version>
            </dependency>

            <!-- OpenHFT Thread Affinity -->
            <dependency>
                <groupId>net.openhft</groupId>
                <artifactId>affinity</artifactId>
                <version>${thread.affinity.version}</version>
            </dependency>

            <!-- gRPC & Protobuf -->
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-netty-shaded</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-stub</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
